--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tensorflow/tfjs": "^0.12.2",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "firebase": "^5.2.0"
+    "firebase": "^5.2.0",
+    "validatorjs": "^3.14.2"
   }
 }
